[tool.poetry]
name = "dff-calc"
version = "0.2.0"
description = "Calculate dF/F for neural calcium traces"
authors = ["HagaiHargil <hagaihargil@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.2"
pandas = "^1.0.3"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
